--- a/luke/.classpath
+++ b/luke/.classpath
@@ -17,13 +17,17 @@
 	<classpathentry kind="lib" path="lib/hadoop/slf4j-log4j12-1.4.3.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop/xmlenc-0.52.jar"/>
 	<classpathentry kind="lib" path="lib/js.jar"/>
-	<classpathentry kind="lib" path="lib/solr/solr-core-4.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/solr/solr-solrj-4.3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/lucene-analyzers-common-4.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-core-4.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-misc-4.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-queries-4.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-queryparser-4.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-analyzers-common-4.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-core-4.6.0.jar" sourcepath="C:/Users/Han/Downloads/lucene-4.6.0">
+		<attributes>
+			<attribute name="source_encoding" value="UTF-8"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/lucene-misc-4.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-queries-4.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-queryparser-4.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/solr/solr-core-4.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/solr/solr-solrj-4.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
